# MIPT_Programming_project

./: CMakeLists.txt  README.md
Source/: Available_Buildings.cpp  Building_List.cpp  Building_List.h  Hall.cpp  Health.h  Map.cpp  Map.h  Miner.cpp  UI_Textures.cpp  barrak.cpp  building.h  main.cpp  unit.cpp  unit.h
Source_for_SFML2.6.0/: Hall.h  Health.cpp  Map.cpp  Miner.cpp  building.cpp
Source_for_SFML2.6.2/: Building_List.cpp  Building_List.h  Map.cpp  Miner.cpp  UI_Textures.cpp  UI_Textures.h  bot.h  building.cpp  building.h  main.cpp  unit.cpp
Source_for_SFML3.0.0/: GAME  Health.cpp  UI_Textures.cpp  main.cpp
Source_for_SFML3.1.0/: sfml_app
